# Python.tinyLM-lab

./: README.md  pyproject.toml
models/: tiny_char_LM_shakespear_acc-0.4282.keras  tiny_char_LM_shakespear_acc-0.4678.keras  tiny_char_LM_train_acc-0.9848.keras
source/: tiny_char_LM_train.py  tiny_char_LM_train_shakespear.py  tiny_char_LM_train_v2.py
