[project]
name = "python-tinylm-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.1"
dependencies = [
    "keras>=2.9.2",
    "pandas>=1.2.3",
    "sequential>=1.0.0",
    "sync>=1.0.0",
    "pydot",
    "graphviz",
    "rich",
    "scikit-learn>=1.0.2",
    "matplotlib>=3.5.3",
    "tabulate>=0.9.0",
    "icecream>=2.1.4",
]
